Sun Jun  4 03:45:45 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wap-events.c: wap_event_dump now reports name of Octstr
	fields.
	
	* gw/wsp_pdu.c: bit position is advanced correctly when unpacking
	a Uintvar. Also, dump tells when the dump ends.
	
	* gw/wsp_state-decl.h: Duplicate the URL octet string.
	
Sun Jun  4 02:36:10 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wsp_pdu.[ch]: Added function wsp_pdu_create, which creates
	an (empty) PDU of the desired type. Made the warning about an
	unknown PDU type in wsp_pdu_destroy be a panic instead.

	* gw/wsp.c, gw/wsp_state-decl.h: Converted to use wsp_pdu.[ch]
	for unpacking. We have issues with packing: at least some fields
	need to be packed in a special way, and this needs to be handled
	in a clean way.

Sun Jun  4 01:03:55 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/protected.[ch]: Added wrapper for gethostbyname.
	
	* gwlib/socket.c: Made use of wrapper.

Sun Jun  4 00:52:22 2000  Lars Wirzenius  <liw@wapit.com>

	* gwlib/protected.[ch]: Wrote thread-safe wrappers around 
	standard library functions gmtime, localtime, and rand. Note
	that this is just a beginning, we should wrap many more functions.
	
	* gw/urltrans.c, gwlib/gwlib.[ch], gwlib/log.c: Made use of the
	wrappers.

Sun Jun  4 00:20:19 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/numhash.c: Added typecasts to silence compiler warnings. Kalle,
	please fix it properly so it uses unsigned chars.

Sun Jun  4 00:06:23 2000  Lars Wirzenius  <liw@wapit.com>

	* gw/wap-events.c: Added assertions to wap_event_name. Added
	calls to wap_event_assert. Event duplication now also works for
	NULL arguments. Fixed wap_event_assert (i.e., reduced the number
	of checks it makes - it was overly aggressive).
	
	* gw/wsp.c: Added calls to wap_event_assert.

2000-06-03  Richard Braakman  <dark@wapit.com>

	* gwlib/octstr.[ch]: Added octstr_append_uintvar.

	* gw/wsp_pdu.[ch], gw/wsp_pdu.def: Do the same for WSP PDU's.

	* gw/wtp_pdu.c: Bugfixes.
